--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1948,6 +1948,7 @@ input, select, textarea {
 		position: relative;
 		overflow: hidden;
 		width: 100%;
+		border-radius: 25px;
 		background: #ffffff;
 		box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25);
 		-moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
